test-utils/proc-macros/tests/compile-fail/flag_on_single_old_mysql.rs
#![allow(unused_imports)]

use test_utils::upstream;

#[upstream(mysql, 57, gtid)]
#[test]
fn old_mysql_gtid() {}

fn main() {}
